--- a/NextCheatDayZCheckout.html
+++ b/NextCheatDayZCheckout.html
@@ -401,7 +401,7 @@
             <h2>More of NextCheat DayZ</h2>
             <div class="video-grid">
                 <div class="video-container">
-                    <video src="/api/placeholder/400/225" alt="Feature showcase 1">
+                    <video src="https://cdn.discordapp.com/attachments/1326758608465166397/1338744732192342047/dickedonbaby.mov?ex=67b372f0&is=67b22170&hm=883dbef32e0478e55e4512a7d159ceaae3d45e31df26aab2bd21388b13f92b19&" alt="Feature showcase 1">
                 </div>
                 <div class="video-container">
                     <video src="/api/placeholder/400/225" alt="Feature showcase 2">
