--- a/NextCheatDayZCheckout.html
+++ b/NextCheatDayZCheckout.html
@@ -396,15 +396,24 @@
                 <li>Working and undetected rage features such as loot teleport, speedhack, and more!</li>
             </ul>
         </div>
-
         <div class="videos-section">
             <h2>More of NextCheat DayZ</h2>
             <div class="video-grid">
                 <div class="video-container">
-                    <video src="/api/placeholder/400/225" alt="Feature showcase 1">
+                    <iframe 
+                        src="https://www.youtube.com/embed/YOUR_FIRST_VIDEO_ID" 
+                        frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                        allowfullscreen>
+                    </iframe>
                 </div>
                 <div class="video-container">
-                    <video src="/api/placeholder/400/225" alt="Feature showcase 2">
+                    <iframe 
+                        src="https://www.youtube.com/embed/YOUR_SECOND_VIDEO_ID" 
+                        frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                        allowfullscreen>
+                    </iframe>
                 </div>
             </div>
         </div>
