--- a/NextCheatLiteCheckout.html
+++ b/NextCheatLiteCheckout.html
@@ -394,19 +394,28 @@
                 <li>In-built Spoofer</li>
             </ul>
         </div>
-
-        <div class="videos-section">
-            <h2>More of NextCheat Lite</h2>
-            <div class="video-grid">
-                <div class="video-container">
-                    <video src="/api/placeholder/400/225" alt="Feature showcase 1">
-                </div>
-                <div class="video-container">
-                    <video src="/api/placeholder/400/225" alt="Feature showcase 2">
+            <div class="videos-section">
+                <h2>More of NextCheat Lite</h2>
+                <div class="video-grid">
+                    <div class="video-container">
+                        <iframe 
+                            src="https://www.youtube.com/embed/YOUR_FIRST_VIDEO_ID" 
+                            frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                    <div class="video-container">
+                        <iframe 
+                            src="https://www.youtube.com/embed/YOUR_SECOND_VIDEO_ID" 
+                            frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                            allowfullscreen>
+                        </iframe>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
     <footer id="contact">
         <a href="https://discord.gg/bypassd" class="discord-button" target="_blank">
