--- a/NextCheatProCheckout.html
+++ b/NextCheatProCheckout.html
@@ -395,20 +395,28 @@
                 <li>In-built Spoofer</li>
             </ul>
         </div>
-
-        <div class="videos-section">
-            <h2>More of NextCheat Pro</h2>
-            <div class="video-grid">
-                <div class="video-container">
-                    <video src="/api/placeholder/400/225" alt="Feature showcase 1">
-                </div>
-                <div class="video-container">
-                    <video src="/api/placeholder/400/225" alt="Feature showcase 2">
+            <div class="videos-section">
+                <h2>More of NextCheat Pro</h2>
+                <div class="video-grid">
+                    <div class="video-container">
+                        <iframe 
+                            src="https://www.youtube.com/embed/YOUR_FIRST_VIDEO_ID" 
+                            frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                    <div class="video-container">
+                        <iframe 
+                            src="https://www.youtube.com/embed/YOUR_SECOND_VIDEO_ID" 
+                            frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                            allowfullscreen>
+                        </iframe>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-
     <footer id="contact">
         <a href="https://discord.gg/bypassd" class="discord-button" target="_blank">
             <img src="https://assets-global.website-files.com/6257adef93867e50d84d30e2/636e0a6a49cf127bf92de1e2_icon_clyde_blurple_RGB.png" alt="Discord Logo">
